--- a/src/app/chart/chart.component.html
+++ b/src/app/chart/chart.component.html
@@ -1,31 +1,45 @@
+<md-grid-list cols="4" rowHeight="15:1">
+  <md-grid-tile [colspan]="tileSpan1" [style.background]="tileColor1">
+    <div class='text1'>
+      Missing values
+    </div>
+  </md-grid-tile>
+  <md-grid-tile [colspan]="tileSpan2" [style.background]="tileColor2">
+    <div class='text2'>
+      Data distribution
+    </div>
+  </md-grid-tile>
+</md-grid-list>
+
 <div fxLayout='column' class="container">
 
   <div fxFlex="100%" [fxLayout]="direction" class="innerContainer">
 
-    <div fxFlex="30%" class="chart01">
-      <ngx-charts-pie-chart [view]="view2" [scheme]="colorScheme2" [results]="chartData01" [legend]="showLegend" [explodeSlices]="explodeSlices"
-        [labels]="showLabels" [doughnut]="doughnut" [gradient]="gradient" (select)="chart01Clicked($event)">
-        </ngx-charts-pie-chart>
-    </div>
-
-    <div fxFlex="30%" class="chart02">
+    <div class="chart02">
       <ngx-charts-advanced-pie-chart [view]="view" [scheme]="colorScheme1" [customColors]="customColors" [results]="chartData02"
         [gradient]="gradient" (select)="chart02Clicked($event)">
-        </ngx-charts-advanced-pie-chart>
+      </ngx-charts-advanced-pie-chart>
+    </div>
+
+    <div fxFlex="20%" class="chart04">
+      <table ngl-datatable [data]="statsData" [striped]="striped" [bordered]="bordered" style="background-color:rgb(250, 250, 250); border: 1px solid #fafafa; width: 220px;"
+        trackByKey="rank" class="slds-max-medium-table--stacked-horizontal">
+        <ngl-datatable-column heading="" key="stat"></ngl-datatable-column>
+        <ngl-datatable-column heading="" key="value" cellClass="slds-text-align--center">
+          <template nglDatatableCell let-row="row"><b>{{row.value}}</b></template>
+        </ngl-datatable-column>
+      </table>
+    </div>
+
+    <div fxFlex="30%" class="chart01">
+      <ngx-charts-bar-vertical [view]="view2" [scheme]="colorScheme2" [results]="chartData01" [legend]="showLegend" [xAxis]="showXAxis"
+        [yAxis]="showYAxis" [showXAxisLabel]="showXAxisLabel" [showYAxisLabel]="showYAxisLabel" [xAxisLabel]="xAxisLabel" [yAxisLabel]="yAxisLabel"
+        [gradient]="gradient" (select)="chart01Clicked($event)">
+      </ngx-charts-bar-vertical>
     </div>
 
     <div fxFlex="20%" class="chart03">
       <div id="chart03"></div>
-    </div>
-
-    <div fxFlex="20%" class="chart04">
-      <table ngl-datatable [data]="statsData" [striped]="striped" [bordered]="bordered" style="background-color:rgb(250, 250, 250); border: 1px solid lightgray; width: 220px;"
-        trackByKey="rank" class="slds-max-medium-table--stacked-horizontal">
-        <ngl-datatable-column heading="Function" key="stat"></ngl-datatable-column>
-        <ngl-datatable-column heading="Value" key="value" cellClass="slds-text-align--center">
-          <template nglDatatableCell let-row="row"><b>{{row.value}}</b></template>
-        </ngl-datatable-column>
-        </table>
     </div>
 
   </div>
