change type in AnnotationService, now contains Arrays

--- a/src/app/table/annotation/detailMode.component.html
+++ b/src/app/table/annotation/detailMode.component.html
@@ -9,7 +9,7 @@
 
   Subject : {{ isSubject }} <br>
   Type : {{ type }} <br>
-  TypeLabel : {{ typeLabel}}
+  TypeLabel : {{ typeLabel}}<br>
   <div *ngIf=" isSubject ">
     Property : {{ property }} <br>
     PropertyLabel : {{ propertyLabel }} <br>
