--- a/src/app/table/annotation/annotation.component.html
+++ b/src/app/table/annotation/annotation.component.html
@@ -8,7 +8,7 @@
     <input id="{{ colId }}.Object" type="radio"  name="{{ colId }}.radio" value="Object" (click)="objectSelect()"> O <br>
 
     <nav>
-      <a [routerLink]="['/detail']"> Go to detail page </a><br>
+      <a [routerLink]="['/detail', colId]"> Go to detail page </a><br>
     </nav>
 
     <div>
