--- a/src/app/table/annotation/detailMode.component.html
+++ b/src/app/table/annotation/detailMode.component.html
@@ -33,4 +33,14 @@
 
   <button (click)="saveChanges()"> Apply </button>
 
+  <br><br>
+  <!--<table>
+  <th> {{ header }} <th>
+    <td>
+      <tr *ngFor="let row of colContent">
+        {{row}}
+      </tr>
+    </td>
+  </table>
+-->
 </div>
