--- a/src/app/table/annotation/annotation.component2.html
+++ b/src/app/table/annotation/annotation.component2.html
@@ -7,25 +7,46 @@
 
     </ngl-form-group-element>
   </fieldset>
+
     <nav>
       <a [routerLink]="['/detail']"  (click) = "goToDetailMode()"> Go to detail page </a><br>
     </nav>
 
     <div>
-      <input id="{{ colId }}.Type" placeholder="Insert here type" value="{{ type }}"> <br>
-      <input id="{{ colId }}.TypeLabel" placeholder="Insert here type label" value="{{ typeLabel }}"> <br>
+      <ngl-form-element label="Input Label" [error]="hasError ? error : null" class="slds-m-top--small">
+        <input nglFormControl type="text" id="{{ colId }}.Type" placeholder="Insert here type" value="{{ type }}"
+               [required]="required">
+        <input nglFormControl type="text" id="{{ colId }}.TypeLabel" placeholder="Insert here type label"
+               value="{{ typeLabel }}" [required]="required"> <br>
+
+
+      <!--<input id="{{ colId }}.Type" placeholder="Insert here type" value="{{ type }}"> <br>-->
+      <!--<input id="{{ colId }}.TypeLabel" placeholder="Insert here type label" value="{{ typeLabel }}"> <br>-->
 
       <div *ngIf=" !isSubject ">
-        <input id="{{ colId }}.Property" placeholder="Insert here property" value = "{{ property }}"> <br>
-        <input id="{{ colId }}.PropertyLabel" placeholder="Insert here property label" value = "{{ propertyLabel }}"> <br>
+        <input nglFormControl type="text" id="{{ colId }}.Property" placeholder="Insert here property"
+               value = "{{ property }}"> <br>
+        <input nglFormControl type="text" id="{{ colId }}.PropertyLabel" placeholder="Insert here property label"
+               value = "{{ propertyLabel }}"> <br>
 
-        <input type="radio" name="dataType" value="URL" (click)="dataTypeURL()"> URL <br>
-        <input type="radio" name="dataType" value="Literal" (click)="dataTypeLiteral()"> Literal <br>
 
-        <input id="{{ colId }}.DataTypeLabel" placeholder="Insert here datatype label" value="{{ dataTypeLabel }}"> <br>
+        <fieldset ngl-form-group-alt [required]="required" [error]="hasError ? error : null" class="slds-m-top--small">
+          <template nglFormLabel><i>Select datatype of object</i></template>
+          <ngl-form-group-element *ngFor="let day of ['URL', 'Literal']">
+            <template nglFormLabel>{{day}}</template>
+            <input nglFormControl type="radio"  name="{{ colId }}.dataType" value="URL" (click)="subjectSelect()">
 
+          </ngl-form-group-element>
+        </fieldset>
+
+        <!--<input type="radio" name="dataType" value="URL" (click)="dataTypeURL()"> URL <br>-->
+        <!--<input type="radio" name="dataType" value="Literal" (click)="dataTypeLiteral()"> Literal <br>-->
+
+        <input nglFormControl type="text" id="{{ colId }}.DataTypeLabel" placeholder="Insert here datatype label"
+               value="{{ dataTypeLabel }}"> <br>
       </div>
-      <button (click)="saveChanges(colId)"> Apply </button>
+      </ngl-form-element>
+      <button type="button" nglButton="neutral" (click)="saveChanges(colId)"> Apply </button>
     </div>
 </div>
 
