--- a/src/app/table/annotation/annotation.component2.html
+++ b/src/app/table/annotation/annotation.component2.html
@@ -1,15 +1,18 @@
 <div id = "annotation-component">
   <fieldset ngl-form-group-alt [required]="required" [error]="hasError ? error : null" class="slds-m-top--small">
-    <template nglFormLabel><i>Select Subject or Object</i></template>
-    <ngl-form-group-element *ngFor="let day of ['S', 'O']">
-    <template nglFormLabel>{{day}}</template>
-      <input nglFormControl id="{{ colId }}.Subject " type="radio"  name="{{ colId }}.radio" value="Subject" (click)="subjectSelect()">
+    <template nglFormLabel></template>
+    <ngl-form-group-element *ngFor="let char of ['S', 'O']">
+    <template nglFormLabel>{{char}}</template>
+      <input nglPopover="I open and close with 1 second delay..." nglPopoverBehavior nglTooltip
+             #x="nglPopover"
+             nglFormControl id="{{ colId }}.Subject " type="radio"  name="{{ colId }}.radio" value="Subject"
+             (click)="subjectSelect() ">
 
     </ngl-form-group-element>
   </fieldset>
 
     <nav>
-      <a [routerLink]="['/detail']"  (click) = "goToDetailMode()"> Go to detail page </a><br>
+      <a class="btn btn-sm" [routerLink]="['/detail']"  (click) = "goToDetailMode()"> Go to detail page </a><br>
     </nav>
 
     <div>
