--- a/src/app/table/annotation/detailMode.component.html
+++ b/src/app/table/annotation/detailMode.component.html
@@ -1,5 +1,5 @@
-<div align = "left">
-
+<div class="container">
+<div class="col-xs-6">
   <a [routerLink] = "['/home']"> Return to Annotation Mode </a> <br>
 
   Hello, i'm DetailMode <br>
@@ -44,10 +44,11 @@
     </table>
   </div>
 </div>-->
-
-<table ngl-datatable [data]="colContent" trackByKey="value" [(sort)]="sort"
-       (onRowClick)="onRowClick($event)" class="slds-max-medium-table--stacked-horizontal">
-  <ngl-datatable-column key="value" sortable></ngl-datatable-column>
-
-</table>
+</div>
+  <div class="col-xs-6">
+    <table ngl-datatable [data]="colContent" trackByKey="value" [(sort)]="sort"
+           (onRowClick)="onRowClick($event)" class="slds-max-medium-table--stacked-horizontal">
+      <ngl-datatable-column key="value" sortable></ngl-datatable-column>
+    </table>
+  </div>
 </div>
