--- a/src/app/table/annotation/detailMode2.component.html
+++ b/src/app/table/annotation/detailMode2.component.html
@@ -1,1 +1,79 @@
-<div> hi {{ entity }} </div>
+<div class="container">
+  <div class="row">
+<div class="col-xs-6">
+<a [routerLink] = "['/home']"> Return to Annotation Mode </a> <br>
+
+Hello, i'm DetailMode <br>
+
+Subject : {{ isSubject }} <br>
+Type : {{ type }} <br>
+TypeLabel : {{ typeLabel }}<br>
+<div *ngIf=" !isSubject ">
+  Property : {{ property }} <br>
+  PropertyLabel : {{ propertyLabel }} <br>
+  DataType : {{ dataType }} <br>
+  DataTypeLabel : {{ dataTypeLabel }} <br>
+</div>
+<div id = "annotation-component">
+  <fieldset ngl-form-group-alt [required]="required" [error]="hasError ? error : null" class="slds-m-top--small">
+    <template nglFormLabel></template>
+    <ngl-form-group-element *ngFor="let char of ['S', 'O']">
+      <template nglFormLabel>{{char}}</template>
+      <input
+             nglFormControl id="{{ colId }}.Subject " type="radio"  name="{{ colId }}.radio" value="Subject"
+             (click)="subjectSelect(char) ">
+
+    </ngl-form-group-element>
+  </fieldset>
+
+  <nav>
+    <a class="btn btn-sm" [routerLink]="['/detail']"  (click) = "goToDetailMode()"> Go to detail page </a><br>
+  </nav>
+
+  <div>
+    <ngl-form-element label="Input Label" [error]="hasError ? error : null" class="slds-m-top--small">
+      <input nglFormControl type="text" id="{{ colId }}.Type" placeholder="Insert here type" value="{{ type }}"
+             [required]="required">
+      <input nglFormControl type="text" id="{{ colId }}.TypeLabel" placeholder="Insert here type label"
+             value="{{ typeLabel }}" [required]="required"> <br>
+
+
+      <!--<input id="{{ colId }}.Type" placeholder="Insert here type" value="{{ type }}"> <br>-->
+      <!--<input id="{{ colId }}.TypeLabel" placeholder="Insert here type label" value="{{ typeLabel }}"> <br>-->
+
+      <div *ngIf=" !isSubject ">
+        <input nglFormControl type="text" id="{{ colId }}.Property" placeholder="Insert here property"
+               value = "{{ property }}"> <br>
+        <input nglFormControl type="text" id="{{ colId }}.PropertyLabel" placeholder="Insert here property label"
+               value = "{{ propertyLabel }}"> <br>
+
+
+        <fieldset ngl-form-group-alt [required]="required" [error]="hasError ? error : null" class="slds-m-top--small">
+          <template nglFormLabel><i>Select datatype of object</i></template>
+          <ngl-form-group-element *ngFor="let day of ['URL', 'Literal']">
+            <template nglFormLabel>{{ day }}</template>
+            <input nglFormControl type="radio"  name="{{ colId }}.dataType" value="{{ day }}" (click)="dataTypeSelect()">
+
+          </ngl-form-group-element>
+        </fieldset>
+
+        <!--<input type="radio" name="dataType" value="URL" (click)="dataTypeURL()"> URL <br>-->
+        <!--<input type="radio" name="dataType" value="Literal" (click)="dataTypeLiteral()"> Literal <br>-->
+
+        <input nglFormControl type="text" id="{{ colId }}.DataTypeLabel" placeholder="Insert here datatype label"
+               value="{{ dataTypeLabel }}"> <br>
+      </div>
+    </ngl-form-element>
+    <button type="button" nglButton="neutral" (click)="saveChanges(colId)"> Apply </button>
+  </div>
+</div>
+</div>
+<div class="col-xs-6">
+<table ngl-datatable [data]="colContent" trackByKey="value" [(sort)]="sort"
+       (onRowClick)="onRowClick($event)" class="slds-max-medium-table--stacked-horizontal">
+  <ngl-datatable-column key="value" sortable></ngl-datatable-column>
+
+</table>
+</div>
+</div>
+</div>
