Change behavior of annotation form

--- a/src/app/table/tabular/tabular.component.html
+++ b/src/app/table/tabular/tabular.component.html
@@ -1,5 +1,7 @@
 <rdf [data]='data' [hot]='hot' [headers]='headers' [inferredTypes]='inferredTypes'
-     (emitter)='getEmittedRDFdata($event)'></rdf>
+     (emitter)='getEmittedRDFdata($event)'>
+
+</rdf>
 
 <div *ngIf="!tabularMode">
   <table>
