--- a/src/app/table/annotation/annotation.component.html
+++ b/src/app/table/annotation/annotation.component.html
@@ -1,29 +1,57 @@
 <div id = "annotation-component">
-  <form>
-    <input id="{{ colId }}.Subject " type="radio"  name="{{ colId }}.radio" value="Subject" (click)="subjectSelect()"> S
-    <input id="{{ colId }}.Object" type="radio"  name="{{ colId }}.radio" value="Object" (click)="objectSelect()"> O <br>
 
-    <nav>
-      <a [routerLink]="['/detail']"  (click) = "goToDetailMode()"> Go to detail page </a><br>
-    </nav>
+    <div class = "row">
+      <div class="col-xs-4">
+        <fieldset ngl-form-group-alt [required]="required" [error]="hasError ? error : null">
+          <template nglFormLabel></template>
 
-    <div>
-      <input id="{{ colId }}.Type" placeholder="Insert here type" value="{{ type }}"> <br>
-      <input id="{{ colId }}.TypeLabel" placeholder="Insert here type label" value="{{ typeLabel }}"> <br>
+          <ngl-form-group-element *ngFor="let char of ['S', 'O']">
+            <template nglFormLabel>{{char}}</template>
 
-      <div *ngIf=" !isSubject ">
-        <input id="{{ colId }}.Property" placeholder="Insert here property" value = "{{ property }}"> <br>
-        <input id="{{ colId }}.PropertyLabel" placeholder="Insert here property label" value = "{{ propertyLabel }}"> <br>
+            <input
+              nglFormControl id="{{ colId }}.Subject " type="radio"  name="{{ colId }}.radio" value="Subject"
+              (click)="subjectSelect( char ) ">
 
-        <input type="radio" name="dataType" value="URL" (click)="dataTypeURL()"> URL <br>
-        <input type="radio" name="dataType" value="Literal" (click)="dataTypeLiteral()"> Literal <br>
 
-        <input id="{{ colId }}.DataTypeLabel" placeholder="Insert here datatype label" value="{{ dataTypeLabel }}"> <br>
+          </ngl-form-group-element>
+        </fieldset>
+      </div>
+      <div class="col-xs-4">
+
+          <a class="btn btn-sm" [routerLink]="['/detail']"  (click) = "goToDetailMode()"> Detail page </a><br>
 
       </div>
-      <button (click)="saveChanges(colId)"> Apply </button>
     </div>
-  </form>
+
+  <div *ngIf = " first ">
+    <ngl-form-element label="Input Label" [error]="hasError ? error : null" class="slds-m-top--small">
+      <input nglFormControl type="text" id="{{ colId }}.Type" placeholder="Insert here type" value="{{ type }}"
+             [required]="required">
+      <input nglFormControl type="text" id="{{ colId }}.TypeLabel" placeholder="Insert here type label"
+             value="{{ typeLabel }}" [required]="required"> <br>
+
+      <div *ngIf=" !isSubject && first ">
+        <input nglFormControl type="text" id="{{ colId }}.Property" placeholder="Insert here property"
+               value = "{{ property }}"> <br>
+        <input nglFormControl type="text" id="{{ colId }}.PropertyLabel" placeholder="Insert here property label"
+               value = "{{ propertyLabel }}"> <br>
+
+
+        <fieldset ngl-form-group-alt [required]="required" [error]="hasError ? error : null" class="slds-m-top--small">
+          <template nglFormLabel><i>Select datatype of object</i></template>
+          <ngl-form-group-element *ngFor="let dataType of ['URL', 'Literal']">
+            <template nglFormLabel>{{dataType}}</template>
+            <input nglFormControl type="radio"  name="{{ colId }}.dataType" value="URL" (click)="dataTypeSelect(dataType)">
+
+          </ngl-form-group-element>
+        </fieldset>
+
+        <input nglFormControl type="text" id="{{ colId }}.DataTypeLabel" placeholder="Insert here datatype label"
+               value="{{ dataTypeLabel }}"> <br>
+      </div>
+    </ngl-form-element>
+    <button type="button" nglButton="neutral" (click)="saveChanges(colId)"> Apply </button>
+  </div>
 </div>
 
 
@@ -31,3 +59,4 @@
 
 </detailMode>-->
 <!--(click) ="setDetailMode(colId)"-->
+
