--- a/src/app/table/annotation/annotation.component.html
+++ b/src/app/table/annotation/annotation.component.html
@@ -25,16 +25,16 @@
 
   <div *ngIf = " first ">
     <ngl-form-element label="Input Label" [error]="hasError ? error : null" class="slds-m-top--small">
-      <input nglFormControl type="text" id="{{ colId }}.Type" placeholder="Insert here type" value="{{ type }}"
+      <input nglFormControl type="text" id="{{ colId }}.Type" placeholder="Insert here type" value="{{ annotation.type }}"
              [required]="required">
       <input nglFormControl type="text" id="{{ colId }}.TypeLabel" placeholder="Insert here type label"
-             value="{{ typeLabel }}" [required]="required"> <br>
+             value="{{ annotation.typeLabel }}" [required]="required"> <br>
 
-      <div *ngIf=" !isSubject && first ">
+      <div *ngIf=" !annotation.isSubject && first ">
         <input nglFormControl type="text" id="{{ colId }}.Property" placeholder="Insert here property"
-               value = "{{ property }}"> <br>
+               value = "{{ annotation.property }}"> <br>
         <input nglFormControl type="text" id="{{ colId }}.PropertyLabel" placeholder="Insert here property label"
-               value = "{{ propertyLabel }}"> <br>
+               value = "{{ annotation.propertyLabel }}"> <br>
 
 
         <fieldset ngl-form-group-alt [required]="required" [error]="hasError ? error : null" class="slds-m-top--small">
@@ -47,7 +47,7 @@
         </fieldset>
 
         <input nglFormControl type="text" id="{{ colId }}.DataTypeLabel" placeholder="Insert here datatype label"
-               value="{{ dataTypeLabel }}"> <br>
+               value="{{ annotation.dataTypeLabel }}"> <br>
       </div>
     </ngl-form-element>
     <button type="button" nglButton="neutral" (click)="saveChanges(colId)"> Apply </button>
