--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,6 +12,7 @@
     <div class="header-nav">
       <a href="javascript:void(0);" (click)="setTabularMode();" class={{linkTabular}}><span class="nav-text">Tabular Mode</span></a>
       <a href="javascript:void(0);" (click)="setRdfMode();" class={{linkRDF}}><span class="nav-text">RDF Mode</span></a>
+      <a href="javascript:void(0);" (click)="setVisualizationMode();" class={{linkVisualization}}><span class="nav-text">Visualization</span></a>
     </div>
     <div class="header-actions">
       <clr-dropdown class="dropdown bottom-right">
@@ -27,16 +28,22 @@
       </clr-dropdown>
     </div>
   </header>
-  <!-- Tabular/ rdf mode section -->
+
+  <!-- Tabular/ rdf/ visualization mode section -->
   <div class="content-container">
     <!-- Main content area -->
     <div class="content-area">
-      <div class="tabular">
+      <div class="tabular" *ngIf="tabularMode">
         <tabular [profileSubset]="profileSubset" (profileSubsetEmitter)="onProfileSubsetEmitted($event)" (tableSelectedEmitter)="onTableSelectedEmitted($event)"></tabular>
       </div>
+      <div class="visualization" *ngIf="visualizationMode">
+        <visualization></visualization>
+      </div>
     </div>
+
     <!-- Sidebar section -->
     <nav class="sidenav">
+      <!-- Tabular and RDF mode -->
       <clr-tabs *ngIf="tabularMode">
         <clr-tab-link [clrTabLinkId]="'link1'" [clrTabLinkActive]="true">File Import</clr-tab-link>
         <clr-tab-link>Suggested Transformations</clr-tab-link>
@@ -66,6 +73,10 @@
           </div>
         </clr-tab-content>
       </clr-tabs>
+
+      <!-- Visualization mode -->
+      <sidebarvisualization *ngIf="visualizationMode"></sidebarvisualization>
+
     </nav>
   </div>
 
