--- a/src/app/sidebar.import/sidebar.import.component.html
+++ b/src/app/sidebar.import/sidebar.import.component.html
@@ -6,7 +6,8 @@
       <option>Stocks</option>
       <option>Flights 300K</option>
       <option>Airports</option>
-      <option>RDF</option>      
+      <option>RDF</option>
+            <option>Air quality Oslo</option>            
     </select>
   </ngl-form-element>
 </div>
