--- a/src/app/table/rdf/rdf.component.html
+++ b/src/app/table/rdf/rdf.component.html
@@ -1,3 +1,5 @@
 <div id="rdf">
 
+  <button type="button" nglButton="neutral" (click)="annotationService.getRemoteResponse()"> Get Remote Response </button>
+
 </div>
