savechanges work, detail mode is initialized in the correct mode

--- a/src/app/table/annotation/annotation.component.html
+++ b/src/app/table/annotation/annotation.component.html
@@ -19,8 +19,8 @@
       </fieldset>-->
     </div>
     <div>
-      <ngl-badge [type]="SubjectMarker" class="slds-m-horizontal--large"> Subject </ngl-badge>
-      <ngl-badge [type]="ObjectMarker" class="slds-m-horizontal--large"> Object </ngl-badge>
+      <ngl-badge [type]="subjectMarker" class="slds-m-horizontal--large"> Subject </ngl-badge>
+      <ngl-badge [type]="objectMarker" class="slds-m-horizontal--large"> Object </ngl-badge>
     </div>
 
 
