--- a/src/app/table/annotation/detailMode.component.html
+++ b/src/app/table/annotation/detailMode.component.html
@@ -15,17 +15,10 @@ TypeLabel : {{ annotation.typeLabel }}<br>
   DataTypeLabel : {{ annotation.dataTypeLabel }} <br>
 </div>
 <div id = "annotation-component">
-  <fieldset ngl-form-group-alt [required]="required" [error]="hasError ? error : null" class="slds-m-top--small">
-    <template nglFormLabel></template>
-    <ngl-form-group-element *ngFor="let char of ['S', 'O']">
-      <template nglFormLabel>{{char}}</template>
-      <input
-             nglFormControl id="{{ colId }}.Subject " type="radio"  name="{{ colId }}.radio" value="Subject"
-             (click)="subjectSelect(char) ">
-
-    </ngl-form-group-element>
-  </fieldset>
-
+  <div>
+    <ngl-badge [type]="subjectMarker" class="slds-m-horizontal--large"> Subject </ngl-badge>
+    <ngl-badge [type]="objectMarker" class="slds-m-horizontal--large"> Object </ngl-badge>
+  </div>
   <nav>
     <a class="btn btn-sm" [routerLink]="['/detail']"  (click) = "goToDetailMode()"> Go to detail page </a><br>
   </nav>
