commit before refactoring of name in annotation class

--- a/src/app/sidebar.import/sidebar.import.component.html
+++ b/src/app/sidebar.import/sidebar.import.component.html
@@ -5,7 +5,9 @@
       <option>Stocks</option>
       <option>Flights 300K</option>
       <option>Airports</option>
-      <option>RDF</option>      
+      <option>Customer</option>
+      <option>Product</option>
+
     </select>
   </ngl-form-element>
 </div>
